2016-03-31  Henry Butowsky  <henryb@hush.com>

	* Modify LHC casting so "pathological" expressions like 'three_dmn_var_dbl[time,lon,lat]=three_dmn_var_dbl.int()' work

2016-03-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha06 final changes';git push
	git tag -a 4.5.6-alpha06 -m 'Version 4.5.6-alpha06 new features: trr ntl ncap2 att prp';git push --tags

	* Successfully (de-)interleave ENVI files (viable GDAL replacement)!

	* Change default gaa mode (back from) append to overwrite to prevent repeated values in climo_nco.sh ANN files

2016-03-29  Charlie Zender  <zender@uci.edu>

	* Functionalize nco_sng2typ()

	* Full Terraref trr infrastructure: nco_trr_ini(), nco_trr_read(), nco_trr_free()

2016-03-28  Charlie Zender  <zender@uci.edu>

	* Add binary file read utilities

	* Clarify append message to include metadata consequences

2016-03-24  Henry Butowsky  <henryb@hush.com>

	* Implement new notation to LHC a scalar, e.g., four[]=10;

2016-03-24  Charlie Zender  <zender@uci.edu>

	* Initialize kvm.val to NULL to handle empty values, e.g., --gaa history=""

2016-03-24  Henry Butowsky  <henryb@hush.com>

	* Attribute propagation from RHS now works with LHC

2016-03-22  Charlie Zender  <zender@uci.edu>

	* ncremap uses append not overwrite mode

	* ncatted new nappend mode appends only to existing attributes

2016-03-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.6-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.6-alpha05 final changes';git push
	git tag -a 4.5.6-alpha05 -m 'Version 4.5.6-alpha05 new features: ncap2 pointers, terraref';git push --tags

	* Add paths for LLNL aims machines to ncremap, climo_nco.sh, climo_ann.sh

2016-03-18  Henry Butowsky  <henryb@hush.com>

	* Removed all print functions from ncoGrammar

	* Print now handled as method by print_cls() in fmc_all_cls.cc

2016-03-09  Charlie Zender  <zender@uci.edu>
