@@ -390,7 +390,7 @@ nco_trr_read /* [fnc] Read, parse, and print contents of TERRAREF file */
   if(var_raw.vp) var_raw.vp=(void *)nco_free(var_raw.vp);
 
   /* Open grid file */  
-  fl_out_tmp=nco_fl_out_open(fl_out,FORCE_APPEND,FORCE_OVERWRITE,fl_out_fmt,&bfr_sz_hnt,RAM_CREATE,RAM_OPEN,WRT_TMP_FL,&out_id);
+  fl_out_tmp=nco_fl_out_open(fl_out,&FORCE_APPEND,FORCE_OVERWRITE,fl_out_fmt,&bfr_sz_hnt,RAM_CREATE,RAM_OPEN,WRT_TMP_FL,&out_id);
 
   /* Define dimensions */
   rcd=nco_def_dim(out_id,wvl_nm,wvl_nbr,&dmn_id_wvl);
